# EGBI

./: CMakeLists.txt  README.md
cli/: main.cpp
examples/: basic_usage.cpp
include/egbi/: bitvector.hpp  egbi.hpp  index.hpp  types.hpp
testdata/: corpus.txt
tests/: test_egbi.cpp
